set(SRCS "")

macro(add_ant_physics SRCFILE)
  list(APPEND SRCS ${CMAKE_CURRENT_SOURCE_DIR}/${SRCFILE})
  set(SRCS ${SRCS} PARENT_SCOPE)
endmacro()

add_subdirectory(calibration)
add_subdirectory(check)
add_subdirectory(common)
add_subdirectory(etaprime)
add_subdirectory(misc)
add_subdirectory(omega)
add_subdirectory(pi0)
add_subdirectory(production)
add_subdirectory(scratch)
add_subdirectory(test)
add_subdirectory(tpc)
add_subdirectory(tunings)

add_library(physics_classes ${SRCS})
target_link_libraries(physics_classes third-party-interface)